2010-11-24  Jigal van Hemert <jigal@xs4all.nl>

	* Fixed bug #16560: Hide mod_menu of record listing in page module if not needed (Thanks to Georg Ringer)

2010-11-23  Steffen Ritter  <typo3@steffen-ritter.net>

	* Fixed bug #16518: Extra frame after default password change, link from reports module (Thanks to Kevin Walter)
	* Fixed bug #16517: t3lib_beFunc::getRecordWSOL() does not use it's param $useDeleteClause in else branch

2010-11-22  Jigal van Hemert <jigal@xs4all.nl>

	* Fixed bug #14974: Extra frame after default password change, link from welcome screen (Thanks to Kevin Walter)

2010-11-19  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to bug #16431: htmlArea RTE: in WebKit, clicking on image does not select it

2010-11-17  Francois Suter  <francois@typo3.org>

	* Fixed bug #16147: getRecordOverlay fetches "Versioning Preview Overlay" but does not return the fields _ORIG_uid and _ORIG_pid (Thanks to Andreas Kiessling)

2010-11-16  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16431: htmlArea RTE: in WebKit, clicking on image does not select it
	* Fixed bug #16433: htmlArea RTE: Default action not prevented on click in status bar

2010-11-13  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #7855: IRRE doesn't save collapse/expand state of nested IRRE records
	* Fixed bug #9508: Workspace preview link should work in multidomain-environments (Thanks to Michael Klapper)

2010-11-12  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #15456: Changes made by ColorPicker Wizard are not saved (Thanks to Tobias Hoevelborn)
	* Fixed bug #6001: Install Tool image tests fail when there are spaces in the path name of im_path, and auto-detection of IM under Windows improved

2010-11-11  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #16314: Incorrect use of is_dir in class.tx_rtehtmlarea_clearrtecache.php (Thanks to Juergen Deisenroth)

2010-11-11  Christian Kuhn  <lolli@schwarzbu.ch>
